# enum_handler

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  publish  rustfmt.toml  watch-and-expand
enum_handler_core/: Cargo.toml  README.md
enum_handler_core/src/: enum_handler_args.rs  error.rs  generator.rs  lib.rs  model.rs  tests.rs
enum_handler_core/tests/: enum_handler_test.rs  mock_test.rs
enum_handler_derive/: Cargo.toml  README.md
enum_handler_derive/src/: lib.rs
src/: lib.rs
