[package]
name = "enum_handler_derive"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "This crate is part of the enum_handler crate. Do not use it directly."

[lib]
proc-macro = true

[dependencies]
enum_handler_core.workspace = true
proc-macro2.workspace = true

[lints]
workspace = true
